[package]
name = "tfn-test-launchpad"
version = "0.0.1"
authors = [ "DrDelphi",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.multiversx-sc]
version = "0.54.4"

[dependencies.tfn-platform]
path = "../tfn-platform-rs"

[dependencies.tfn-launchpad]
path = "../tfn-launchpad-rs"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.4"
